add sweet alert to signip form

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.2.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
